--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -5,7 +5,9 @@
 @layer base {
   body {
     @apply bg-white text-gray-900 antialiased;
-    font-feature-settings: "rlig" 1, "calt" 1;
+    font-feature-settings:
+      "rlig" 1,
+      "calt" 1;
   }
 }
 
